[project]
name = "query-fan-out"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
]
